<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

<group
    android:checkableBehavior="single"><!--now the group act as radio button -->

    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"/>

    <item
        android:id="@+id/history"
        android:title="@string/history"
        android:icon="@drawable/baseline_history_24"/>

    <item
        android:id="@+id/bar_chart"
        android:title="@string/bar_chart"
        android:icon="@drawable/baseline_bar_chart_24"/>

    <item
        android:id="@+id/pie_chart"
        android:title="@string/pie_chart"
        android:icon="@drawable/baseline_pie_chart_24"/>
</group>

</menu>