<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.SignupActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="403dp"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/signup_username_ET"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:textSize="21sp"
                android:inputType="textEmailAddress"
                android:importantForAutofill="yes"
                tools:ignore="Autofill"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:hint="@string/e_mail_hint"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/signup_password_ET"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:textSize="21sp"
                android:inputType="textPassword"
                android:hint="@string/password_hint"
                android:importantForAutofill="yes"
                tools:ignore="Autofill"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:padding="10dp"/>

            <EditText
                android:id="@+id/signup_confirm_password_ET"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:textSize="21sp"
                android:inputType="textPassword"
                android:hint="@string/confirm_password_hint"
                android:importantForAutofill="yes"
                tools:ignore="Autofill"
                android:textColorHint="@color/white"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"
                android:padding="10dp"/>

            <Button
                android:id="@+id/signup_BTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/border"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:text="@string/sign_up_btn"/>

            <TextView
                android:id="@+id/login_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginTop="5dp"
                android:textColor="@color/green"
                android:text="@string/already_registered_log_in"/>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>