<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="403dp"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/login_username_ET"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:hint="@string/e_mail_hint"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="21sp"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/login_password_ET"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/border"
            android:hint="@string/password_hint"
            android:importantForAutofill="yes"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="21sp"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/login_BTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border"
            android:text="@string/log_in_btn"
            android:textColor="@color/black"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/signup_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/not_yet_registered_sign_up"
            android:textColor="@color/green"
            android:textSize="15sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>